--- a/communities.html
+++ b/communities.html
@@ -6,8 +6,8 @@
 	<link type="text/css" rel="stylesheet" href="//cdn.datatables.net/1.10.13/css/jquery.dataTables.min.css">
 	<link type="text/css" rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 	<link type="text/css" rel="stylesheet" href="https://unpkg.com/carbon-components/css/carbon-components.min.css">
-	<link type="text/css" rel="stylesheet" href="/css/styles.css"/>
-  <link rel="shortcut icon" href="/images/favicon.png">
+	<link type="text/css" rel="stylesheet" href="css/styles.css"/>
+  <link rel="shortcut icon" href="images/favicon.png">
 	<!-- <script type="text/javascript"> 
 		var SemTagSvcConfig = {baseUrl: "https://dpc-c60.ibmcollabcloud.com", proxyURL: "/bizCard"};
 	</script>
@@ -65,7 +65,7 @@
 	<script type="text/javascript" src="//code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 	<script type="text/javascript" src="//cdn.datatables.net/1.10.13/js/jquery.dataTables.min.js"></script>
 	<!--<script type="text/javascript" src="/js/jquery.loadmask.min.js"></script>-->
-	<script type="text/javascript" src="/js/date.format.js"></script>
-	<script type="text/javascript" src="/js/script.js"></script>
+	<script type="text/javascript" src="js/date.format.js"></script>
+	<script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
