--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="https://unpkg.com/carbon-components/css/carbon-components.min.css">
 
     <link rel="stylesheet" type="text/css" href="css/styles.css">
-    <link rel="shortcut icon" href="/images/favicon.png">
+    <link rel="shortcut icon" href="images/favicon.png">
 </head>
 
 <body>
@@ -29,7 +29,7 @@
   	</div>
 	
 	
-	<script type="text/javascript" src="/js/index.js"></script>
+	<script type="text/javascript" src="js/index.js"></script>
     
 </body>
 </html>
