--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
         Welcome to the IBM Connections Cloud Community Usage Checker!
         This application will list the communities you can access, and show you some 
         details about those communities.  It uses OAuth, so clicking the Login button below
-        will attempt to log you in to IBM Connections Cloud. If that succeeds, you'll be prompted
+        will attempt to log you in to the <strong>Showcase Org</strong> on IBM Connections Cloud. 
+        If that succeeds, you'll be prompted
         to grant access to this application, after which it will show you your communities.
         <p>Questions? Suggestions? Drop me a line at
         <a href='&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#100;&#99;&#97;&#99;&#121;&#64;&#117;&#115;&#46;&#105;&#98;&#109;&#46;&#99;&#111;&#109;'>&#100;&#99;&#97;&#99;&#121;&#64;&#117;&#115;&#46;&#105;&#98;&#109;&#46;&#99;&#111;&#109;</a>
     </div>
 	<div id="buttonWrapper" class="buttonWrapper">
-    <a class="someButton" href="https://openwhisk.ng.bluemix.net/api/v1/web/dcacy_community-usage-checker/community-usage-checker/login">Log In</a>
+    <a class="someButton" href="https://openwhisk.ng.bluemix.net/api/v1/web/dcacy_community-usage-checker/community-usage-checker/login">Log In to Showcase</a>
   	</div>
 	
 	
